Changes for Perl extension Module-Install

0.86 to be released
	- Adding ./example, ./test and ./xt to the no_index list (ADAMK)
	- Removed $VERSION from the tests (ADAMK)
	- Various POD fixes (ADAMK)

0.85 Sun 19 Apr 2009 - Adam Kennedy
	- All files no use strict to satisfy Kwalitee (ADAMK)

0.84 Tue 14 Apr 2009 - Adam Kennedy
	- Fix incorrect if => unless conversion (CHORNY)

0.83 Tue 14 Apr 2009 - Adam Kennedy
	- Module::Install::DSL wasn't correctly loading the main
	  Module::Install package when trying to install on a host
	  that didn't have M:I installed locally (CSJEWELL)
	- Module::Install no longer supports Perl versions less than
	  5.005, so we can now safely just "require" File::Spec (ADAMK)

0.82 Wed  9 Apr 2009 - Adam Kennedy
	- If configure_requires has ExtUtils::MakeMaker and it's version
	  requires perl 5.6, require perl 5.6 for dist in META.yml (CHORNY)
	- Fixes to Module/AutoInstall.pm: (MSTROUT)
	  - don't prompt for required dependencies under CPAN/CPANPLUS
	  - allow PERL_AUTOINSTALL_PREFER_CPAN env var to disable cpanp use
	- Module::Install::DSL now correctly installs itself into the
	  generated tarball (ADAMK)
	- Preferentially dispatch leading-underscore methods used in plugins
	  to the main Module::Install object (ADAMK)

0.81 Tue 24 Mar 2009 - Adam Kennedy
	- Use 3-argument open when Perl >= 5.006 (ADAMK)
	- Support for 'keywords' key in META.yml (CHORNY)
	- More URLs for licenses, test for this (CHORNY)
	- tests for extracting link to bugtracker,
	  will more correctly extract them (CHORNY)
	- Adding version-normalising Module::Install::_cmp
	  (for <=> equivalent on versions) (ADAMK)
	- If the Makefile.PL time is in the future by only a few seconds
	  (probably due to 2-second filesystem time rounding on Win32)
	  sleep for 5 seconds to avoid the problem. (ADAMK)
	- Moving from Module::Install::DSL to inc::Module::Install::DSL
	  (to reduce the Makefile.PL header for DSL mode to one line) (ADAMK)