@@ -1,6 +1,11 @@
 Changes for Perl extension Module-Install
 
 0.86 to be released
+	- Alter _check_lock to test the CPAN version and use
+	  PERL5_CPAN_IS_RUNNING if new enough so we don't accidentally
+	  configure CPAN unless it's so old we have no choice (MSTROUT)
+	- Tweak the SkipInstall logic so --skipdeps bypasses everything
+	  again including any loading of CPAN, no matter how old (MSTROUT)
 	- Adding ./example, ./test and ./xt to the no_index list (ADAMK)
 	- Removed $VERSION from the tests (ADAMK)
 	- Various POD fixes (ADAMK)
